--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
   <div class="start_btn">
-    <button>Start Quiz</button>
+    <label>Enter your username:</label><br><br>
+   <input type="text" id="myText"><br><br>
+    <button type="button" id="myButton">Start Quiz</button>
   </div>
 
   <div class="info_box">
@@ -44,7 +46,7 @@
 
     <div class="quiz_box">
       <header>
-        <div class="title">Alinwachukwu Quiz Application</div>
+        <div class="title" id="constant">Alinwachukwu Quiz Application</div>
         <div class="timer">
           <div class="time_text">Time Left: </div>
           <div class="timer_sec">15<span>s🙂</span></div>
